--- a/Arduino/DotChaser/platformio.ini
+++ b/Arduino/DotChaser/platformio.ini
@@ -12,3 +12,6 @@
 platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
+
+upload_port = /dev/cu.SLAB_USBtoUART
+build_flags = -DCORE_DEBUG_LEVEL=0
